feat(post): implement draft flows
